<resources>
    <string name="locale_lang"></string>
    <string name="app_name">FundationCGR</string>
    <string name="action_settings">Settings</string>
    <string name="action_accessibility">Accessibility</string>
    <string name="action_information">Information</string>
    <string name="action_languajes">Languajes</string>
    <string name="action_qr">QR Reader</string>
    <string name="action_rooms">Rooms</string>
    <string name="action_tours">Tours</string>
    <string name="label_options_index">Preferences</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_idioma">Languaje</string>
    <string name="title_select_languaje">Select your languaje:</string>
    <string name="languaje_en">English</string>
    <string name="languaje_es">Spanish</string>
    <string name="languaje_fr">French</string>
    <string name="button_confirm_languaje">CONFIRM</string>
    <string name="title_activity_accesibilidad">Accesibility</string>
    <string name="title_preferences_accesibility">Select your preferences for multimedia content:</string>
    <string name="opt_subtitles">Video with subtitles</string>
    <string name="opt_sign">Sign languaje</string>
    <string name="opt_audio">Audiodescription</string>
    <string name="opt_video">Video</string>
    <string name="opt_text">Text</string>
    <string name="button_save_preferences">SAVE PREFERENCES</string>

    <string name="title_activity_full_screen_video">FullScreenVideo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen_video">FullscreenVideo</string>

    <string name="title_activity_fullscreen_player">FullscreenPlayer</string>
    <string name="action_codigo_numerico">Enter numeric code</string>
    <string name="title_preferences_accesibility2">Select your preferences for textual content:</string>
    <string name="datos_guardados">Data saved correctly</string>
    <string name="title_activity_visualizacion__texto">Visualizacion_Texto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="texto_ayuda">Scan the QR code closest to your position (You can also enter the numerical code manually if desired) :</string>
    <string name="button_enviar">SEND</string>
    <string name="titulo_ayuda">REQUEST FOR ASSISTANCE</string>
    <string name="title_activity_codigo_numerico">CodigoNumerico</string>
    <string name="title_numeric_code">Enter numeric code</string>
    <string name="descripcion_enter_code">Enter the number code that corresponds to the content you want to display. You can find the code next to the resource.</string>
    <string name="code">Code</string>
    <string name="toast_introdicir_codigo">You must enter a code to request assistance</string>
    <string name="message_correct_asistence">We have recived your solicitude of asistence. A member of our staff is coming to your location in a few moments.</string>
    <string name="title_activity_sugerencias">Sugerencias</string>
    <string name="toast_mensaje_enviado">The message has been sent successfully</string>
    <string name="toast_rellenar_campos">No field can be empty</string>
    <string name="title_sugerencias">Suggestions mailbox</string>
    <string name="descripcion_sugerencia">If you have any suggestions you can send it to us to evaluate it and to be attended to as much as possible. We appreciate your collaboration.</string>
    <string name="hint_mensaje">Message</string>
    <string name="hint_nombre">Name</string>
    <string name="volver_principal">Back to main menu</string>
    <string name="aviso_legal">Legal warning</string>
    <string name="title_activity_pantalla_recorrido">PantallaRecorrido</string>
    <string name="action_save">Save</string>
    <string name="title_activity_cargar_guia">CargarGuia</string>
    <string name="title_cargar_guia">Insert guide code</string>
    <string name="texto_cargar_guia">Insert a code to download a custom guide</string>
    <string name="guia_cargada">The guide has been loaded</string>
    <string name="cancelado">Cancelled</string>
    <string name="toast_tittle_tour">You need to type the title for the tour</string>
    <string name="action_share">Share</string>
    <string name="action_enter">Enter</string>
    <string name="text_code">code</string>
    <string name="snackbar_save">Saved correctly!</string>
    <string name="toast_tour_saved">h</string>
    <string name="input_name_tour">Tour name</string>
    <string name="toast_local_tour">Tour saved.</string>
</resources>
