<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_accesibilidad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.hopto.fundacioncgr.fundacioncgr.Accesibilidad"
    tools:showIn="@layout/activity_accesibilidad">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="#f4f9ff"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.29"
            android:background="#c2d7ec">

            <TextView
                android:text="@string/title_preferences_accesibility"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:textSize="14dp"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/opcionesAccesibilidad" />

        </FrameLayout>

        <RadioGroup
            android:layout_width="268dp"
            android:layout_height="138dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:id="@+id/radioGroup"
            android:layout_weight="0.16">




            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt_video"
                android:id="@+id/radioButton_vid"
                android:layout_gravity="center_horizontal|left"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt_subtitles"
                android:id="@+id/radioButton_vid_sub"
                android:layout_gravity="center_horizontal|left"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt_sign"
                android:id="@+id/radioButton_sign"
                android:layout_gravity="center_horizontal|left"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt_audio"
                android:id="@+id/radioButton_audio"
                android:layout_gravity="center_horizontal|left"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt_text"
                android:id="@+id/radioButton_text"
                android:layout_gravity="center_horizontal|left"
                android:checked="true" />

        </RadioGroup>



        <Button

            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:text="@string/button_save_preferences"
            android:id="@+id/buttonGuardarPreferencias"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/buttonBasic"/>


    </LinearLayout>

</RelativeLayout>
