<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_pantalla_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.hopto.fundacioncgr.fundacioncgr.PantallaPrincipal"
    tools:showIn="@layout/activity_pantalla_principal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/caja_granada_logo"
                android:id="@+id/imageView" />

            <LinearLayout
                android:layout_marginTop="10sp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="50sp"
                android:paddingRight="50sp"
                android:layout_weight="0.41"
                android:weightSum="1">

                <Button
                    android:text="@string/action_qr"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:id="@+id/btQR"
                    android:backgroundTint="@color/buttonBasic"
                    android:contentDescription="@string/action_qr"/>
                    android:layout_weight="0.23" />

                <Button
                    android:text="@string/action_codigo_numerico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btTeclado"
                    android:backgroundTint="@color/buttonBasic"/>

                <Button
                    android:text="@string/action_tours"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:id="@+id/btRecorridos"
                    android:backgroundTint="@color/buttonBasic" />

                <Button
                    android:text="@string/action_rooms"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:id="@+id/btSalas"
                    android:backgroundTint="@color/buttonBasic" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="1sp"
                android:paddingLeft="60sp"
                android:paddingRight="60sp"
                android:layout_marginTop="10sp">


                <TextView
                    android:text="@string/label_options_index"
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:id="@+id/tvOpciones" />



            </LinearLayout>





            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="90sp"
                android:paddingRight="90sp">


                <Button
                    android:text="@string/action_languajes"
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:id="@+id/btIdiomas"
                    android:textAlignment="center"
                    android:backgroundTint="@color/buttonBasic"/>

                <Button
                    android:text="@string/action_accessibility"
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:id="@+id/btAccesibilidad"
                    android:textAlignment="center"
                    android:backgroundTint="@color/buttonBasic" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
