<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_idioma"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.hopto.fundacioncgr.fundacioncgr.Idioma"
    tools:showIn="@layout/activity_idioma">


    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:layout_alignParentBottom="true" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="#f4f9ff"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_weight="0.11"
            android:background="#c2d7ec">

            <TextView
                android:text="@string/title_select_languaje"
                android:layout_marginLeft="10dp"
                android:layout_width="283dp"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/seleccionarIdioma" />
        </FrameLayout>

        <RadioGroup
            android:layout_width="268dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="39dp"
            android:id="@+id/radioGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languaje_en"
                android:id="@+id/radioButton_en"
                android:layout_gravity="center_horizontal|left"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languaje_fr"
                android:id="@+id/radioButton_fr"
                android:layout_gravity="center_horizontal|left"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languaje_es"
                android:id="@+id/radioButton_es"
                android:layout_gravity="center_horizontal|left"
                android:checked="false" />

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm_languaje"
            android:id="@+id/buttonConfirmarIdioma"
            android:layout_gravity="center_horizontal"
            android:background="@color/buttonBasic" />
    </LinearLayout>


</RelativeLayout>
