<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sugerencias"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.hopto.fundacioncgr.fundacioncgr.Sugerencias"
    tools:showIn="@layout/activity_sugerencias">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorButtonNormal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/title_sugerencias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#030e6c"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textView6"
            android:layout_marginTop="10dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="82dp"
            app:srcCompat="@drawable/mail"
            android:id="@+id/imageView6" />

        <TextView
            android:text="@string/descripcion_sugerencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#030e6c"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textView7"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_gravity="center_horizontal"
            android:background="#ffffff"
            android:ems="10"
            android:hint="@string/hint_nombre"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:verticalScrollbarPosition="left"
            android:gravity="top"
            android:id="@+id/edit_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:inputType="textMultiLine"
            android:layout_gravity="top"
            android:background="#ffffff"
            android:ems="10"
            android:id="@+id/edit_mensaje"
            android:hint="@string/hint_mensaje"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:verticalScrollbarPosition="left"
            android:gravity="top" />

        <Button
            android:text="@string/button_enviar"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_enviar_sugerencia"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/buttonBasic" />
    </LinearLayout>
</RelativeLayout>
