<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_codigo_numerico"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.hopto.fundacioncgr.fundacioncgr.CodigoNumerico"
    tools:showIn="@layout/activity_codigo_numerico">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:background="#e2e2e2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/title_numeric_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:id="@+id/titulo_codigo"
            android:textStyle="normal|bold"
            android:layout_marginTop="10dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/pin"
            android:id="@+id/imageView5"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"/>

        <TextView
            android:text="@string/descripcion_enter_code"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:id="@+id/descripcion_codigo"
            android:layout_marginTop="20dp"
            android:textAlignment="center" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/input_numeric_code"
            android:layout_marginTop="20dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:layout_weight="0.05"
            android:hint="@string/code" />

        <Button
            android:text="@string/button_confirm_languaje"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_numeric_code"
            android:background="@color/buttonBasic" />
    </LinearLayout>

</RelativeLayout>
