<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ayuda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.hopto.fundacioncgr.fundacioncgr.Ayuda">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorButtonNormal"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center">

        <TextView
            android:text="@string/titulo_ayuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="20sp"
            android:textColor="#030e6c"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:background="#ffffff" />

        <ImageView
            android:layout_width="310dp"
            android:layout_height="101dp"
            app:srcCompat="@drawable/help_icon_100"
            android:id="@+id/imageView4"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="#c4c4c4"
            android:layout_marginTop="10dp">

        </FrameLayout>

        <TextView
            android:text="@string/texto_ayuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editText"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_margin="10dp"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <EditText
                android:layout_width="188dp"
                android:layout_height="32dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/input_codigo_ayuda"
                android:layout_margin="10dp"
                android:background="@color/zxing_status_text"
                android:hint="@string/code" />

            <Button
                android:text="@string/action_qr"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/button_ayudaQR"
                android:layout_weight="0.19"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@color/buttonBasic" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginTop="30dp"
            android:background="#c4c4c4">

        </FrameLayout>

        <Button
            android:text="@string/button_enviar"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_ayuda_send"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/buttonBasic" />

    </LinearLayout>

</RelativeLayout>
