<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lista_contenidos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.hopto.fundacioncgr.fundacioncgr.ListaContenidos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:weightSum="1">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="339dp"
                android:id="@+id/lvContenidos"
                android:layout_weight="0.56">
            </ListView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/input_name_tour"
                android:ems="10"
                android:id="@+id/etNombreGuia" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <Button
                    android:text="@string/action_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btAnadirCont"
                    android:backgroundTint="@color/buttonBasic"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/action_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btCancelar"
                    android:backgroundTint="@color/buttonBasic"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
